crates/command/src/snapshots/builder_command__out_snapshot_test__tests__generate_empty_assets.snap
---
source: crates/command/src/out_snapshot_test.rs
expression: normalized_code
---
// Generated asset code using builder-assets crate
// This file is auto-generated. Do not edit manually.

use builder_assets::*;
use icu_locid::langid;

/// Provider function for loading asset data from filesystem
fn load_asset(path: &str) -> Option<Vec<u8>> {
    let full_path = format!("/tmp/test/{path}");
    std::fs::read(full_path).ok()
}



/// No assets available
pub static ASSETS: [&AssetSet; 0] = [];
