crates/command/src/snapshots/builder_command__out_snapshot_test__tests__generate_multilingual_asset_code.snap
---
source: crates/command/src/out_snapshot_test.rs
expression: normalized_code
---
// Generated asset code using builder-assets crate
// This file is auto-generated. Do not edit manually.

use builder_assets::*;
use icu_locid::langid;

/// Provider function for loading asset data from filesystem
fn load_asset(path: &str) -> Option<Vec<u8>> {
    let full_path = format!("/tmp/test/{path}");
    std::fs::read(full_path).ok()
}

pub static BUTTON: AssetSet = AssetSet {
    url_path: "/components/button.css",
    file_path_parts: FilePathParts {
        folder: Some("components"),
        name: "button",
        hash: Some("def456="),
        ext: "css",
    },
    available_encodings: &[Encoding::Identity, Encoding::Brotli, Encoding::Gzip],
    available_languages: Some(&[langid!("en"), langid!("fr"), langid!("de")]),
    mime: "text/css",
    provider: &load_asset,
};

/// All available assets as a static array
pub static ASSETS: [&AssetSet; 1] = [
        &BUTTON
];

/// Asset catalog for efficient URL-based lookups
pub fn get_asset_catalog() -> AssetCatalog {
    AssetCatalog::from_assets(&ASSETS)
}
